--- a/test_2025_08/后端代码/sping-ioc-demo/src/main/resources/application.properties
+++ b/test_2025_08/后端代码/sping-ioc-demo/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=sping-ioc-demo
+# ???????
+server.port=8080
+#?????????
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testdb?
+characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+#?????
+my.key1=1
+my.key2=true
